<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tomharman.fplplayerpricechanges.MainActivity">
    <item
        android:id="@+id/sort_net_transfers_in_descending"
        android:orderInCategory="100"
        android:title="@string/app_main_menu_nti_sort_descending"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_net_transfers_in_ascending"
        android:orderInCategory="100"
        android:title="@string/app_main_menu_nti_sort_ascending"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_percentage_descending"
        android:orderInCategory="100"
        android:title="@string/app_main_menu_sort_percentage_descending"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_percentage_ascending"
        android:orderInCategory="100"
        android:title="@string/app_main_menu_sort_percentage_ascending"
        app:showAsAction="never" />
</menu>
